src/test/deca/context/invalid/println_boolean.deca
// Description:
//    println non valid
//
// Resultats:
//    Ligne 13: Print non valid car ni int, ni float, ni string
//
// Historique:
//    cree le 01/01/2022


{
    boolean b;
    println (b);
}